--- a/计算机体系结构.md
+++ b/计算机体系结构.md
@@ -1626,3 +1626,305 @@ addi x10, x10, 0x321 # x10 = 0x87654321
 2. **特点：**
    - **无**乘以 2 字节的操作。
    - 与分支指令和 `jal` 指令形成对比。
+
+## 12.编译，汇编，链接和加载
+
+### 1.解释和翻译
+
+在某些情况下，运行程序的一种方法是解释，解释器是一个运行其他程序的程序。
+
+翻译的思想是，将一种语言翻译成更低级的形式，在曲线或光谱上更靠右，然后直接运行它。
+
+**我们如何运行用源语言编写的程序？**
+
+- **解释器 (Interpreter)**: 直接在源语言中执行程序。
+- **翻译器 (Translator)**: 将源语言中的程序转换为另一种语言中的等效程序。
+
+**为什么在软件中解释机器语言？**
+
+- **例如：**
+  **VENUS RISC-V 模拟器** 对学习/调试非常有用
+  **Apple Macintosh 转换**
+- **切换**：从 Motorola 680x0 ISA 转换到 PowerPC（在 x86 之前）。
+- **可能需要**：所有程序从高级语言重新翻译。
+- **相反**：让可执行文件包含旧的和/或新的机器代码，必要时通过软件解释旧代码（仿真）。
+
+**通常解释器更容易编写**
+
+- **例如**：你在 CS61A 中已经做过了！
+
+**解释器更接近高级语言，因此可以提供更好的错误信息**（例如：VENUS）。
+
+- 翻译器的反应：添加额外的信息以帮助调试（例如：行号、名称）。
+
+**解释器更慢**（大约慢10倍？），**代码更小**（大约小2倍？）。
+
+**解释器提供指令集独立性**：可以在任何机器上运行。
+
+**翻译/编译的代码几乎总是更高效，因此性能更高：**
+
+- 对许多应用程序来说很重要，尤其是操作系统。
+
+**翻译/编译可以帮助将程序的“源代码”隐藏起来：**
+
+- 一种在市场中创造价值的模式（例如：微软将所有的源代码保密）。
+- 替代模式：“开源”，通过发布源代码并培养开发者社区来创造价值。
+
+### 2.编译器
+
+加载器是操作系统的一部分，加载器负责将磁盘上的程序a.out加载到内存中，并设置它需要设置的所有东西，很多复杂的事情需要设置，然后运行程序
+
+**输入：** 高级语言代码（例如：`foo.c`）
+**输出：** 汇编语言代码（例如：`foo.s`，用于 RISC-V）
+
+**注意：** 输出**可能**包含伪指令（pseudo-instructions）。
+
+**伪指令：** 汇编器可以理解但不属于机器指令的指令。
+**例如：** 将值从 `t2` 复制到 `t1`：
+
+```asm
+mv t1, t2  ==>  addi t1, t2, 0
+```
+
+### 3.汇编器
+
+**输入：** 汇编语言代码（包含伪操作）
+（例如：`foo.s`，适用于 RISC-V）
+
+**输出：** 目标代码、信息表（仅限真正的汇编）
+（例如：`foo.o`，适用于 RISC-V）
+
+- **读取并使用指令（Directives）**
+- **替换伪指令**
+- **生成机器语言**
+- **创建目标文件（Object File）**
+
+**为汇编器提供指令，但不生成机器指令**
+
+- **`.text`：**
+  将后续内容放入用户文本段（机器代码）。
+- **`.data`：**
+  将后续内容放入用户数据段（源文件数据以二进制形式存储）。
+- **`.globl sym`：**
+  声明符号 `sym` 为全局，可被其他文件引用。
+- **`.string str`：**
+  在内存中存储字符串 `str` 并以空字符（null）结尾。
+- **`.word w1...wn`：**
+  将 `n` 个 32 位数量存储在连续的内存字中。
+
+------
+
+**汇编器将机器语言指令的便捷变体视为真实指令**
+
+**伪指令（Pseudo）：**
+
+- `mv t0, t1`
+- `neg t0, t1`
+- `li t0, imm`
+- `not t0, t1`
+- `beqz t0, loop`
+- `la t0, str`
+
+**真实指令（Real）：**
+
+- `addi t0, t1, 0`
+- `sub t0, zero, t1`
+- `addi t0, zero, imm`
+- `xori t0, t1, -1`
+- `beq t0, zero, loop`
+- `lui t0, str[31:12]`
+  `addi t0, t0, str[11:0]` 或
+  `auipc t0, str[31:12]`
+  `addi t0, t0, str[11:0]`
+
+**简单情况（Simple Case）：**
+
+- 算术、逻辑、移位等
+- 所有必要的信息已经包含在指令中。
+
+**那么分支和跳转（Branches and Jumps）呢？**
+
+- 基于程序计数器（PC-Relative），例如：`beq/bne` 和 `jal`。
+- 一旦伪指令被替换为真实指令，我们就知道分支/跳转需要跳过多少指令。
+
+**因此，这些可以被处理。**
+
+**关于基于 PC 的相对跳转（`jal`）和分支（`beq`, `bne`）呢？**
+
+- `j offset` 伪指令会扩展为 `jal zero, offset`。
+- 只需计算目标和跳转之间的指令“半字”的数量，以确定偏移量：
+  **位置无关代码**（Position-Independent Code，PIC）。
+
+**那么关于对静态数据的引用呢？**
+
+- `la` 会被拆分为 `lui` 和 `addi`（对于 PIC 使用 `auipc/addi`）。
+- 这些需要数据的完整 32 位地址。
+
+**这些目前无法确定，因此我们创建两个表……**
+
+**在此文件中可能被其他文件使用的“项目”列表**
+
+**它们是什么？**
+
+- **Labels（标签）：** 函数调用
+- **Data（数据）：** `.data` 段中的任何内容；可被跨文件访问的变量
+
+**此文件需要其地址的“项目”列表**
+
+**它们是什么？**
+
+- **任何被跳转到的绝对标签：`jal`，`jalr`**
+  - **内部**
+  - **外部**（包括库文件）
+  - 例如 la指令
+    - **例如：** 用于 `jalr` 的基寄存器
+- **静态段中的任何数据**
+  - 例如 la指令
+    - **例如：** 用于 `lw/sw` 的基寄存器
+
+- **目标文件头（object file header）：**
+  目标文件中其他部分的大小和位置。
+- **文本段（text segment）：**
+  机器代码。
+- **数据段（data segment）：**
+  源文件中静态数据的二进制表示。
+- **重定位信息（relocation information）：**
+  标识需要稍后修正的代码行。
+- **符号表（symbol table）：**
+  此文件中标签和静态数据的列表，可供引用。
+- **调试信息（debugging information）：**
+
+**标准格式为 ELF（除 MS 以外）。**
+
+### 4.链接器
+
+**输入：** 目标代码文件，信息表（例如：`foo.o`, `libc.o`，用于 RISC-V）。
+
+**输出：** 可执行代码（例如：`a.out`，用于 RISC-V）。
+
+**将多个目标文件（`.o` 文件）组合成一个可执行文件（称为“链接”）。**
+
+**启用文件的单独编译：**
+
+- 对单个文件的更改无需重新编译整个程序。
+  - **例如：** Linux 源代码 > 2000 万行！
+- **旧名称“链接编辑器”（Link Editor）：** 源于编辑跳转和链接指令中的“链接”。
+
+**第 1 步：** 从每个 `.o` 文件中提取 **文本段（text segment）** 并将它们组合在一起。
+
+**第 2 步：** 从每个 `.o` 文件中提取 **数据段（data segment）**，将它们组合在一起，并将其连接到文本段的末尾。
+
+**第 3 步：** 解析引用：
+
+- 遍历重定位表（Relocation Table）；处理每个条目。
+- 即：填充所有**绝对地址（absolute addresses）**。
+
+**基于 PC 的相对寻址（PC-Relative Addressing）：**
+（例如：`beq`, `bne`, `jal`, `auipc/addi`）
+
+- **从不需要重定位**（PIC：位置无关代码）。
+
+**绝对函数地址（Absolute Function Address）：**
+（例如：`auipc/jalr`）
+
+- **始终需要重定位**。
+
+**外部函数引用（External Function Reference）：**
+（例如：`auipc/jalr`）
+
+- **始终需要重定位**。
+
+**静态数据引用（Static Data Reference）：**
+（通常使用 `lui/addi`）
+
+- **始终需要重定位**。
+
+**哪些指令需要重定位编辑？**
+
+- **J-格式：跳转/跳转并链接（jump/jump and link）**
+  - 示例：`jal`，涉及目标地址 `xxxxx` 和寄存器 `rd`。
+- **I-, S-格式：**
+  - **相对于全局指针（global pointer, `gp`）加载和存储静态区域中的变量。**
+  - 示例：`lw` 和 `sw`，涉及寄存器 `rd`（或 `rs1`）和 `gp`。
+- **条件分支呢？**
+  - 示例：`beq`, `bne`，涉及寄存器 `rs1` 和 `rs2`。
+
+**基于 PC 的相对寻址在代码移动时依然有效（preserved）。**
+
+**链接器（Linker）假设**第一个文本段的第一个字位于地址 `0x10000`（适用于 RV32）。
+
+- （稍后在学习“虚拟内存”时会详细讨论）
+
+**链接器已知的信息：**
+
+- 每个文本段和数据段的长度。
+- 文本段和数据段的排列顺序。
+
+**链接器计算的信息：**
+
+- 每个需要跳转的标签（内部或外部）的**绝对地址**，以及每个被引用数据的绝对地址。
+
+**解决引用：**
+
+- 在所有“用户”符号表中搜索引用（数据或标签）。
+- 如果未找到，则在库文件中搜索（例如：`printf`）。
+- 一旦确定了绝对地址，就在机器代码中适当地填充地址。
+
+**链接器的输出：**
+包含文本和数据（以及头部信息）的可执行文件。
+
+**我们描述的是传统方法：静态链接（statically-linked）方式**
+
+- **库（Library）现在是可执行文件的一部分，**
+  因此，如果库更新，我们不会获得修复（除非我们有源代码并重新编译）。
+- **即使没有使用整个库，也会包含整个库。**
+- **可执行文件是自包含的（self-contained）。**
+
+**替代方法是动态链接库（dynamically-linked libraries，DLL），**
+常见于 Windows 和 UNIX 平台。S
+
+**空间/时间问题（Space/time issues）：**
+
+- **优点：**
+  - 存储程序需要更少的磁盘空间。
+  - 发送程序需要更少的时间。
+  - 如果两个程序共享一个库，执行这两个程序需要更少的内存。
+- **缺点：**
+  - 在运行时需要额外的时间开销来完成链接。
+
+------
+
+**升级（Upgrades）：**
+
+- **优点：**
+  - 替换一个文件（例如：`libXYZ.so`）就可以升级所有使用库 `XYZ` 的程序。
+- **缺点：**
+  - 拥有可执行文件已经不再足够。
+
+**动态链接的主流方法使用机器代码作为“最低公分母”：**
+
+- 链接器（Linker）不会使用程序或库是如何编译的信息（即：使用什么编译器或语言）。
+- 可以描述为“在机器代码级别进行链接”。
+- 这并不是唯一的实现方式……
+
+### 5.加载器
+
+**输入：** 可执行代码（例如：`a.out`，用于 RISC-V）
+
+**输出：** （程序运行）
+
+- 可执行文件存储在磁盘上。
+- 当程序运行时，加载器（Loader）的任务是将其加载到内存中并启动运行。
+
+**实际上，加载器就是操作系统（OS）。**
+
+- 加载是操作系统任务之一。
+
+- **读取可执行文件的头部信息**以确定文本段和数据段的大小。
+- **为程序创建新的地址空间**，足够容纳文本段和数据段，同时包括一个栈段（stack segment）。
+- **将指令和数据从可执行文件复制到新的地址空间中。**
+- **将传递给程序的参数复制到栈中。**
+- **初始化机器寄存器：**
+  - 大多数寄存器被清零，但栈指针被分配到第一个空闲栈位置的地址。
+- **跳转到启动例程**：该例程将程序的参数从栈复制到寄存器并设置程序计数器（PC）。
+  - 如果主例程返回，启动例程通过退出系统调用终止程序。
