--- a/计算机体系结构.md
+++ b/计算机体系结构.md
@@ -1928,3 +1928,276 @@ mv t1, t2  ==>  addi t1, t2, 0
   - 大多数寄存器被清零，但栈指针被分配到第一个空闲栈位置的地址。
 - **跳转到启动例程**：该例程将程序的参数从栈复制到寄存器并设置程序计数器（PC）。
   - 如果主例程返回，启动例程通过退出系统调用终止程序。
+
+## 13.同步数字系统 (SDS) 介绍：开关、晶体管、信号与波形
+
+### 1.开关
+
+处理器的硬件，例如 RISC-V，是一个同步数字系统。
+
+同步：
+
+- 所有操作由中央时钟协调
+- 系统的“心跳”！
+
+数字：
+
+- 所有值由离散值表示
+- 电信号被视为1和0；组合在一起形成字（word，这里可能指的是计算机中的“字”或“字长”）。
+
+- 当 A 为 1 时，闭合开关；当 A 为 0 时，打开开关。
+
+**一个简单电路:**
+
+```scss
+        +----[A]----+
+        |           |
+       ( )          |
+      [S]           |
+        |           |
+       ( )          |
+      [Z]           |
+        |           |
+       ( )          |
+        +-----------+
+```
+
+- 如果 A 是“1”或被断言，则闭合开关并点亮灯泡 (Z)。
+
+- 如果 A 是“0”或未被断言，则打开开关并关闭灯泡 (Z)。
+
+电路的逻辑表达式为：Z = A
+
+**如何将开关组合成更复杂的布尔函数:**
+
+- AND（与）：当 A 和 B 都为“1”或被断言时，开关闭合，输出 Z 为真。
+
+```lua
+        A ------+
+                |
+                |
+               ( )---+
+               |     |
+        B------| AND |---- Z
+               |     |
+               +-----+
+```
+
+- OR（或）：当 A 或 B 至少有一个为“1”或被断言时，开关闭合，输出 Z 为真。
+
+```lua
+        A ------+
+                |
+                |
+               ( )---+
+               |     |
+        B------| OR  |---- Z
+               |     |
+               +-----+
+```
+
+逻辑表达式为：
+
+- Z = A AND B
+- Z = A OR B
+
+### 2.晶体管
+
+**现代数字系统在 CMOS（互补金属氧化物半导体）技术下的设计：**
+
+- MOS：金属氧化物半导体
+- C 代表互补（complementary），指的是通常打开（normally-open）和通常关闭（normally-closed）的开关
+- MOS 晶体管作为电压控制的开关
+
+CMOS 技术是一种广泛用于集成电路的制造工艺，它利用了两种类型的 MOS 晶体管——NMOS（通常关闭）和 PMOS（通常打开）——来构建逻辑门和其他数字电路。这种技术因其低功耗特性而受到青睐，因为在没有输入信号变化时，CMOS 电路几乎不消耗功率。
+
+MOS晶体管的三个端子：漏极（Drain）、栅极（Gate）和源极（Source），以及它们如何作为开关工作。
+
+1. **三个端子：漏极、栅极、源极**
+   - 漏极（D）：电流流出的端子。
+   - 栅极（G）：控制端子，通过施加电压来控制晶体管的开关状态。
+   - 源极（S）：电流流入的端子。
+2. **开关动作**
+   - 如果栅极端子上的电压比源极端子上的电压高/低一定量，那么在漏极和源极之间就会建立导电路径。
+3. **记忆提示**
+   - n沟道（n-channel）：当栅极电压较低时，晶体管打开；当栅极电压高于源极电压加上一个阈值电压（ε）时，晶体管关闭。
+   - p沟道（p-channel）：当栅极电压较低时，晶体管关闭；当栅极电压高于源极电压加上一个阈值电压（ε）时，晶体管打开。
+
+**n沟道晶体管（NMOS）：**
+
+- 栅极（G）没有圆圈。
+- 源极（S）和漏极（D）之间的路径在栅极电压较低时打开。
+
+```lua
+	   D
+       |
+       |
+      -----
+      |   |
+ G --|   |
+      |   |
+ S ------
+```
+
+**p沟道晶体管（PMOS）：**
+
+- 栅极（G）有一个圆圈（表示反向电压）。
+- 源极（S）和漏极（D）之间的路径在栅极电压较高时打开。
+
+```lua
+	   D
+       |
+       |
+      -----
+      |   |
+ G --o   |
+      |   |
+ S ------
+```
+
+### 3.非门
+
+```scss
+         +3V (电源)
+            |
+           ( )
+           | | PMOS
+           | |
+           | |---- Y (输出)
+           | |
+           | |
+           | |      
+        ----|----  
+            |
+            | NMOS
+            | |
+           ( ) 
+            |
+            |---- GND (地，0V)
+                   |
+                   |
+                 X (输入)
+
+```
+
+**X 和 Y 之间的关系是什么？**
+
+X 点的电压比 Y 点高 3V。如果这是一个逻辑问题，那么 X 和 Y 之间的关系可以被描述为 X = 1, Y = 0，其中 1 代表高电位（3V），0 代表低电位（0V）。
+
+### 4.集成电路芯片的基本构成和逻辑门的构建方式：
+
+1. **芯片的基本构成**：
+   - 芯片由晶体管和导线组成。
+   - 晶体管的小组合可以形成有用的构建模块。
+2. **NAND门的构建**：
+   - 一个NAND门由两个晶体管组成。
+   - 输入端标记为a和b，输出端标记为c。
+   - 当a和b都为高电平（"1"，连接到电压源）时，输出c为低电平（"0"，连接到地）。
+   - 当a或b中至少有一个为低电平（"0"，连接到地）时，输出c为高电平（"1"）。
+3. **NAND门的逻辑功能**：
+   - 真值表显示，只有当a和b都为0时，输出c才为1；在所有其他情况下，输出c为0。
+
+**NAND 门电路图**(**与非门**)
+
+```lua
+           +3V (电压源)
+               |
+               |
+               +---+   +---+
+               |   |   |   |
+           a --|>  |   |   |-- c (输出)
+               |   |   |   |
+           b --|>  |---|   |
+               |   |   |   |
+               +---+   +---+
+                   |     |
+                ----     ----
+                   |       |
+                 GND     GND
+```
+
+**解释：**
+
+1. 输入 a 和 b：
+   - 输入 **a** 和 **b** 分别连接到两个 **n沟道晶体管（NMOS）** 的栅极。
+   - 输入 **a** 和 **b** 可以为高电平（"1"）或低电平（"0"）。
+2. 两个 NMOS 晶体管的连接：
+   - 两个 NMOS 晶体管的源极（S）都连接到地（GND）。
+   - 两个 NMOS 晶体管的漏极（D）连接到输出 **c**。
+   - 输出 **c** 通过两个 NMOS 晶体管控制。
+3. 工作原理：
+   - **当 a 和 b 都为高电平（1）** 时，两个 NMOS 晶体管都导通，输出 **c** 被拉到地（低电平 "0"）。
+   - **当 a 或 b 中至少有一个为低电平（0）** 时，至少有一个 NMOS 晶体管不导通，输出 **c** 被拉到高电平（"1"）。
+
+**逻辑真值表：**
+
+| 输入 a | 输入 b | 输出 c |
+| ------ | ------ | ------ |
+| 0      | 0      | 1      |
+| 0      | 1      | 1      |
+| 1      | 0      | 1      |
+| 1      | 1      | 0      |
+
+### 5.型号和波形
+
+1. **周期性信号**：
+   - 图中展示了一个周期性方波信号，其中T表示周期（Time period）。
+   - 周期T与频率（freq）的关系为：T = 1/freq，大约为1/5秒。
+2. **信号的传输特性**：
+   - 当数字信号仅被视为1或0时，它们通过导线连续传输。
+   - 传输被认为是有效的即时性，即信号的传输几乎是瞬间完成的。
+   - 这意味着在任何给定时间，导线上只包含一个值（1或0）。
+
+```markdown
+电压 (V)
+  3V  |    _____          _____          _____
+      |    |    |         |    |         |    |
+      |    |    |         |    |         |    |
+  0V  |____|    |_________|    |_________|    |_______ 时间 (t)
+             T           T           T
+
+```
+
+### 6.加法器传播延迟
+
+**加法器传播延迟**（Adder Propagation Delay）是指在数字电路中，当输入信号发生变化时，加法器的输出信号响应所需的时间。这是加法器的一个重要性能指标，尤其在高速电路设计中，它对系统的整体速度至关重要。
+
+**加法器的基本工作原理：**
+
+- 一个简单的 **半加器（Half Adder）** 有两个输入（A 和 B），并计算一个和（Sum）和一个进位（Carry）。
+- 一个 **全加器（Full Adder）** 具有三个输入（A、B 和进位输入 Cin），输出一个和（Sum）和一个进位输出（Carry Out）。
+
+**加法器传播延迟的影响因素：**
+
+1. **基本门的延迟**：加法器是由基本的逻辑门（如与门、或门、异或门）组成的，而这些门本身都有一定的延迟。传播延迟的大小依赖于这些门的延迟时间。
+2. **级联加法器（如多位加法器）**：在多位加法器中，每个加法器单元的进位输出（Carry Out）会传递到下一个加法器的进位输入（Carry In）。这种级联会造成信号传播的累积延迟。
+3. **进位链的延迟**：加法器中最关键的延迟通常与进位链（Carry Chain）相关。当一个加法器的进位输出成为下一个加法器的进位输入时，信号需要逐步传播，这会导致较长的传播延迟。
+
+**传播延迟的计算：**
+
+传播延迟通常是通过以下两种方式来描述的：
+
+1. **最大传播延迟（Maximum Propagation Delay）**：表示在最坏情况下，从输入信号改变到输出信号稳定所需要的时间。对于一个加法器，最大传播延迟是从输入信号到输出结果（和或进位）最慢的路径所需的时间。
+2. **平均传播延迟**：这是加法器中的所有路径的传播延迟的平均值。一般来说，平均传播延迟较小，因为它不会考虑最坏情况的进位链延迟。
+
+**组合逻辑（Combinational Logic, CL）电路和状态元素（State Elements）电路。**
+
+1. **组合逻辑（CL）电路**：
+   - 组合逻辑电路的输出仅依赖于当前的输入值。
+   - 图片中提到，之前讨论的加法器电路就是一个组合逻辑电路的例子。
+   - 组合逻辑电路的输出是输入的函数，类似于数学中的纯函数，表示为 y = f(x)。这意味着在任何给定时刻，输出完全由输入决定，而且电路在不同时间的运行之间没有记忆功能，即无法存储信息以影响下一次的输出，没有副作用。
+2. **状态元素**：
+   - 状态元素是用于存储信息的电路。
+   - 这些电路能够记住之前的输入状态，并可能根据这些状态来影响当前或未来的输出。
+
+**电路中的脉冲由什么控制**
+
+1. **时钟控制电路的脉冲**：
+   - 时钟信号是数字电路中的同步信号，它控制着电路中操作的时机。时钟信号通常是一个周期性的方波，用于同步电路中的所有操作。
+2. **电压是模拟的，量化为0/1**：
+   - 在数字电路中，电压虽然在物理上是模拟的，但它们被量化为两个状态：高电平（通常表示为1）和低电平（通常表示为0）。
+3. **电路延迟是生活的事实**：
+   - 在实际的电路中，信号从一个地方传播到另一个地方需要时间，这种延迟是不可避免的，并且对电路设计有重要影响。
+4. **两种类型的电路**：
+   - 无状态组合逻辑（Stateless Combinational Logic）：这类电路的输出仅依赖于当前的输入，不依赖于之前的状态。常见的组合逻辑包括与门（AND, &）、或门（OR, |）和非门（NOT, ~）。
+   - 状态电路（State Circuits）：这类电路包含存储元件，如寄存器（registers），它们能够存储信息并根据存储的状态来影响输出。
