--- a/计算机体系结构.md
+++ b/计算机体系结构.md
@@ -2201,3 +2201,78 @@ X 点的电压比 Y 点高 3V。如果这是一个逻辑问题，那么 X 和 Y 
 4. **两种类型的电路**：
    - 无状态组合逻辑（Stateless Combinational Logic）：这类电路的输出仅依赖于当前的输入，不依赖于之前的状态。常见的组合逻辑包括与门（AND, &）、或门（OR, |）和非门（NOT, ~）。
    - 状态电路（State Circuits）：这类电路包含存储元件，如寄存器（registers），它们能够存储信息并根据存储的状态来影响输出。
+
+## 14.同步数字系统（SDS）状态介绍
+
+### 1.累加器
+
+1. **存储值的地方**：
+   - **寄存器文件**：例如在RISC-V架构中的x0-x31寄存器，用于存储数据和指令执行过程中的中间结果。
+   - **内存**：包括缓存（caches）和主内存（main memory），用于存储程序和数据。
+2. **控制信息流**：
+   - 状态元素（state elements）用于在组合逻辑块（combinational logic blocks）之间控制信息的流动。组合逻辑块是指那些输出仅依赖于当前输入的逻辑电路，不依赖于之前的状态。
+3. **状态元素的作用**：
+   - 状态元素在组合逻辑块的输入处保持信息的移动，确保信息能够有序地通过这些逻辑块。这有助于同步数字系统中各个部分的协调工作，确保系统按照预定的时序运行。
+
+寄存器用于保持数据传输到加法器。
+
+**图示：**
+
+```lua
+      +-----------+       +-----------+
+Xi -->|  加法器  |----->|   寄存器  | 
+      +-----------+       +-----------+
+           |                   |
+           |                   | 
+           +---> S              +-->  OUTPUT
+           |
+         +-----+
+         |  LOAD|
+         +-----+
+         +-----+
+         |  CLK |
+         +-----+
+         +-----+
+         |reset |
+         +-----+
+```
+
+### 2.触发器
+
+寄存器和D型触发器（单个）图示：
+
+```lua
+    +------------------+
+    |     D型触发器    |
+    |   +-----------+  |
+    |   |           |  |
+D --->|   D       Q |--- OUTPUT (Q)
+    |   |           |  |
+    |   |  CLOCK    |  |
+    |   +-----------+  |
+    +------------------+
+```
+
+- 触发器之所以这样命名，是因为其输出在0和1之间翻转。
+- D是“数据”（Data），Q是“输出”（Output）。
+- 也被称为“D型触发器”（D-type Flip-Flop）。
+- 过去还有其他类型的触发器。
+
+多个D型触发器级联（移位寄存器）：
+
+```lua
+   +------------------+    +------------------+    +------------------+
+D -->|     D型触发器    |--->|     D型触发器    |--->|     D型触发器    |
+      |    D       Q   |    |    D       Q   |    |    D       Q   |
+      |   CLOCK        |    |   CLOCK        |    |   CLOCK        |
+      +------------------+    +------------------+    +------------------+
+                    ↑                    ↑                    ↑
+                  OUTPUT              OUTPUT              OUTPUT
+                  (Q1)                (Q2)                (Q3)
+```
+
+**数据流和控制：**
+
+- 数据输入D通过时钟信号（CLOCK）控制存储在第一个触发器中。
+- 每个触发器的输出（Q）作为下一个触发器的输入（D）。
+- 数据从左至右依次传递，直到移位寄存器的最后一个触发器。
