--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -17,3 +17,53 @@
 ```
 
 计算机系统结构定义了计算机系统的软硬件的交界面，程序员所看到的计算机系统的属性。计算机组成设计人员的任务是实现计算机体系结构所体现出来的属性。
+
+### 3.计算机的基本组成
+
+冯诺依曼计算机是一种**存储程序结构**的计算机，数据和程序以**二进制方式**存放在计算机中。冯诺依曼计算机由五大部件组成，包括**运算器、控制器、存储器、输入设备和输出设备**。指令和数据以**同等地位**保存在存储器中，以二进制形式表示。指令由**操作码和地址码**构成，操作码指明操作类型，地址码指明操作数所在地址。冯诺依曼计算机的核心特点是存储程序，程序存放在存储器中。冯诺依曼计算机的硬件框图以运算器为中心，数据通过运算器进行流动。然而，以运算器为核心的冯诺依曼结构存在繁忙和瓶颈问题。
+
+冯诺依曼机工作方式的基本特点是按地址访问并顺序执行指令。
+
+### 4.对冯诺依曼机进行改进
+
+首先，我们将运算器作为中心改进为以存储器为中心的机器，实现了输入输出设备和存储器之间的直接信息交换。
+
+计算机系统的层次化结构，将计算机硬件划分为主机系统和IO系统，并进一步细化了CPU、主存和IO设备等模块。
+
+CPU：运算器ALU,控制器CU
+
+存储器：主存，辅存
+
+主机：主存，CPU
+
+IO系统：输入设备，输出设备，辅存
+
+应对系统复杂性的三种方法：层次化、模块化和规则性。
+
+层次化：将被设置的系统划分为多个模块或子模块
+
+模块化：有明确定义的功能和接口
+
+规则性：模块更容易被重用
+
+### 5.计算机可计算性理论
+
+可计算性：一类问题能否使用计算机去解决。
+
+程序：运算的全部步骤
+
+指令：每一个步骤
+
+指令和数据都是保存在存储器中的
+
+### 6.存储器的基本组成
+
+存储器是核心结构，由多个存储单元构成，每个存储单元保存了若干个01的个数，称为存储字，存储字长是存储单元当中二进制代码的位数。
+
+存储单元：存放一个存储字的所有存储元集合。
+
+存储字：存储单元中二进制代码的组合。
+
+存储单元按地址进行寻址，寄存器MAR(存储器地址寄存器)保存了存储单元的地址或编号，MAR反映了存储单元的个数。MDR(存储器数据寄存器)保存了要送入CPU中的数据或要保存到存储体中的数据，MDR反映了存储字长。
+
+运算器的核心结构是累加器，保存了其中的一个操作数和运算的结果。
