--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -12,6 +12,8 @@
 
 计算机的系统软件包括语言处理程序、操作系统、数学库、MPI等。而应用软件则是面向特定任务和目标的程序，如游戏、数据库管理系统等。
 
+计算机的算力的单位是Flops(floating point operations per second)，即每秒可执行的浮点运算次数，Flops并不能反应许多对实际输出运算效率有影响的因素，因而计算机的实际Flops算力与理论峰值会有一段不小的差距
+
 ### 2.计算机系统的层次结构
 
 ```markdown
@@ -49,6 +51,18 @@
 冯诺依曼计算机的关键是**存储程序**，即程序作为数据存储在计算机中，通过控制器逐步执行指令。这种结构具有灵活性，但也存在性能瓶颈，主要体现在**冯诺依曼瓶颈**（即CPU与内存之间的数据传输速度差异）。
 
 冯诺依曼机工作方式的基本特点是按地址访问并顺序执行指令。
+
+**1.程序指令和数据共用同一个存储器，进行等位存储，可以按地址寻访**
+
+**2.指令和数据均以二进制表示**
+
+**3.指令由操作码和地址码组成**，操作码反应了该指令的具体操作，地址码反映了操作需要应用到的操作数据所在的地址
+
+**4.对程序指令进行存储和读取执行**
+
+**5.以运算器为运行中心**
+
+**哈佛结构**是计算机体系的另一种组织结构，它与冯·诺伊曼结构最大的区别是区分了程序指令和数据的存储器，分别使用两套地址/数据总线进行读写，**改进型哈佛结构**则对地址/数据总线进行了统一
 
 ### 4.对冯诺依曼机进行改进
 
@@ -92,11 +106,13 @@ IO系统：输入设备，输出设备，辅存
 
 存储单元：存储器中的最小单位，每个存储单元可以存储一定量的数据（如一个字节）。
 
-存储字：存储单元中二进制代码的组合，是存储器的基本访问单位。。
+存储字：存储单元中二进制代码的组合，是存储器的基本访问单位。
 
 存储单元按地址进行寻址，寄存器MAR(存储器地址寄存器)保存了存储单元的地址或编号，MAR反映了存储单元的个数。MDR(存储器数据寄存器)保存了要送入CPU中的数据或要保存到存储体中的数据，MDR反映了存储字长。
 
 存储原件：用于存储数据的物理器件，如动态随机存储器（DRAM）和静态随机存储器（SRAM）。
+
+MAR和MDR是**存储器联系外部的窗口**，或称**接口寄存器**
 
 ### 7.运算器的结构
 
@@ -250,9 +266,11 @@ CPU一次能处理数据的位数
 
 **2.运算速度**
 
-1.主频
+1.主频：CPU时钟周期的频率，CPU的指令操作是在时钟信号控制下，每周期逐步完成的，因而主频在一定程度上能够反应CPU的运算速度
 
-2.核数，每个核支持的线程数
+2.核数，每个核支持的线程数：CPU中每个核心都是能够独立执行某个程序/线程的处理器，高荷载下每个核心都能尽量保证自己的效率的稳定，但多核的优势也需要系统/程序进行对应的优化才能发挥作用，执行某些复杂的大型程序时，核心之间也需要相互配合才能完成工作，因而并不是多一个核心速度就能快一倍
+
+主频与核心数只能说是硬件为了应对工作而进行的准备，因而并不能很好的反映实际的工作效率
 
 3.吉普森法
 
@@ -300,3 +318,39 @@ $$
 - 字节数 80 GB
 
 这里的“主存”通常指的是RAM（随机存取存储器），而“辅存”则通常指的是硬盘驱动器或其他类型的非易失性存储。存储单元个数指的是存储器中可以存储数据的单元数量，存储字长指的是每个存储单元可以存储的位数。字节数是衡量存储容量的单位，1字节（Byte）等于8位（bit），1千字节（KB）等于210210字节，即1024字节。
+
+## 第二章 计算机的发展与应用
+
+### 1.计算机发展的驱动力
+
+计算机本质就是用于计算的机器，因而其发展的一大驱动力就是人类，从国防到公司团体再到个人，对实现高速运算需求的不断扩展
+
+技术的发展也起到了很大的作用，主要是**硬件(电子技术)**的不断发展，和**计算机体系结构理论**的发展完善
+
+其中硬件(电子技术)的发展对现代计算机的发展起到了决定性的作用，因而计算机的更新换代就是电子技术的更新换代
+
+### 2.微处理器和微型计算机
+
+微处理器是指一片高度集成化的电路，包含控制器，运算器，所构成的处理核心，也就是我们平时所说的CPU
+
+微型计算机是指使用维处理作为处理核心，高度集成化的，面向个人用户，体积小，重量轻，价格低的计算机型，也就是我们平时所说的电脑
+
+### 3.摩尔定律
+
+摩尔定律是Interl公司创始人之一Gordon Moore所提出的，CPU发展过程中，新一代的CPU约每隔18-24个月就会发布，其包含的晶体管数量便会较上一代增加一倍，性能也会提升一倍，从而1美元能够购买到的算力每18-24个月便会增长一倍
+
+然而随着晶体管的不断缩小，集成度不断增大，集成电路芯片已经逐步顶到了电介质传导速度和量子隧穿效应两大天花板，导致如今的发展较摩尔定律预测逐步放缓，逐渐达到集成电路这种构造模式的瓶颈，以至于停滞不前
+
+CPU/微处理器芯片正期待着能有更先进的构造技术，打破集成电路的瓶颈，以迈向新世代
+
+### 4.计算机软件的发展
+
+计算机软件技术的发展主要是编程语言和系统软件的发展过程
+
+早期的编程直接使用机器语言，对应硬件指令集进行编程，后来逐渐发展出汇编语言，相比机器语言更容易记忆，之后出现的面向过程，面向对象的高级语言使程序员不必在意底层的硬件实现，可以直接针对问题进行编码
+
+系统软件是面向硬件编程，管理硬件资源，解决硬件问题，为上层软件提供/维护运行环境的一类软件，操作系统是系统软件的一类，是软件的底层。系统软件的应用使上层软件开发者，计算机的使用者不必在意底层的硬件工作。语言处理程序(汇编，编译，解释程序)，服务性程序（装配，调试，诊断，排错），数据库管理系统，网络软件也属于系统软件
+
+现代软件的特点是，代码量大，制作成本昂贵，软件测试/质量检测流程复杂。软件的开发依赖多人协作编码完成，开发周期长
+
+输入域测试，代码覆盖测试，路径覆盖测试，是软件测试的一些基本策略，但对于现代软件而言这些测试也需要消耗大量的人力物力，并且往往只针对某个单元进行全面覆盖，因而软件出现漏洞，出现bug，造成损失，只能尽量规避，无法完全避免
