--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -734,3 +734,96 @@ T4周期内，T5周期上升沿之前，地址信号撤销
 
 分离式通信的特点是要求所有设备都有权申请总线占用（都能作为主设备），收发数据采用同步模式进行，各个设备准备数据时不占用总线，总线被占用是一定进行数据交换（没有占而不用的情况）
 
+## 第四章 存储器(上)
+
+存储器是现代储存程序计算机中重要的组成部件之一，计算机运行时的程序指令，数据都保存在存储器中，改进型的冯·诺伊曼结构也是以存储器为核心
+
+### 1.存储器的分类
+
+**1.按存储介质分类**
+
+可分为**半导体存储器，磁介质存储器，磁芯存储器，光盘存储器**
+
+我们使用的内存条，U盘都属于半导体存储器，半导体存储器又可分为TTL(Transistor-Transistor-Logic)晶体管-晶体管逻辑型存储器和MOS(Metal-Oxide-Semiconductor Field-Effect Transistor, MOSFET)金属氧化物半导体效应场管型存储器
+
+TTL型存储器集成度低功耗高但速度快，MOS型存储器集成度高功耗低，现代计算机存储器主要是MOS型
+
+磁盘，磁带都属于磁介质存储器，在金属表面涂抹磁层，作为**磁载体**，利用磁化方向的不同来表示0和1，磁盘表面每一圈可保存0/1的同心圆称之为**磁道**，由小到大磁道弧排列形成**扇区**，以扇区为单位进行数据的存储
+
+磁介质存储器在读取数据时需要通过**磁头**移动寻找扇区，并判别磁道不同位置的磁化方向/或施加相应的磁化从而完成数据的读写
+
+磁芯存储器(Core Memory)，通过横纵导线磁环构成，是计算机芯片内部的存储器，曾为计算机发展做出一定的贡献
+
+光盘存储器采用激光和磁光材料，进行数据的存储和读写
+
+半导体存储器是**易失型**存储器(RAM)，需要持续供电来维持数据保存，断电后数据丢失，另外三种存储器都是**非易失型**(ROM)，能够在断电后保存数据
+
+**按存取方式分类**
+
+可分为**随机访问**存储器和**串行访问**存储器
+
+随机访问存储器存取时间与物理地址无关，只要给出地址就能进行寻址访问，例如内存
+
+随机访问存储器又可分为随机存储器(程序执行中可读可写)，和只读存储器(用于存放系统参数等只读常量)
+
+而串行范围存储器，存取时间与物理地址有关，根据地址的不同存取时间会有所差异，需要针对物理地址位置进行一定的调整才能完成数据的读写，例如磁盘，磁带
+
+串行存储器又可分为顺序存取存储器，例如磁带，只能按物理地址顺序读写，和直接存取存储器，例如磁盘，可以在任意指定位置读写数据，但磁头需要根据物理位置进行一定的调整
+
+**按作用分类**
+
+![img](https://picx.zhimg.com/v2-5468cc51d6c01e82c273a86080296e2d_1440w.jpg)
+
+主存储器可分为RAM和ROM，易失性和非易失性，RAM容量小高速但断电后数据会丢失（内存），ROM容量大低速能在断电后保存数据（硬盘）
+
+闪存(Flash Memory)其实属于EEPROM(电擦除可编程只读存储器)，它的读取速度较ROM更快，可以进行反复擦写，并且能在断电后保存数据
+
+我们使用的**U盘**就属于闪存，一些高性能的微型计算机可能直接将闪存作为硬盘使用，就是所谓的**固态硬盘（SSD）**
+
+闪存不能像RAM那样以字节为单位改写数据，因而不能取代RAM
+
+闪存也可以用做主辅存储器之间/寄存器主存之间的速度调剂，即**缓存**，我们可以在读取数据后提前预取附近位置的数据到缓存中，如果之后需要读取的数据恰好已经被保存到了缓存中，就可以直接读取缓存，称之为“**缓存命中**”
+
+**CPU寄存器和内存之间就会使用Cache高速缓存**，一些磁盘也会使用SSD阵列作为缓存提高读取速度
+
+辅助存储器是指光盘，磁盘，磁带一类外部低速存储器
+
+与辅存相比，主存的特点是容量小，速度快，成本高。
+
+### 2.存储器的层次结构
+
+![img](https://pic2.zhimg.com/v2-8b795bb5a23a3b4ad32feff1636984df_1440w.jpg)
+
+用户的需求通常希望存储器能够有更低的价格，更大的容量，更快的速度
+
+但实际并**没有任何一种单一的存储器能够兼顾这三方面的优势**，因而存储器形成了如上图所示的**层次结构**，在不同层次，不同的存储器之间通过**硬件接口，软件适配，或是软硬件结合**的方式进行**连接**，从而构成一整套计算机**存储体系**，从而**整个存储体系能够做到三方兼顾**
+
+寄存器是直接部署在某一硬件部件内部的容量低，但速度极快的存储器，是硬件运行时能直接访问到的，直接进行处理的数据，除了CPU，I/O设备中也会布置寄存器
+
+其中部分寄存器是提供给机器语言程序员进行编码读写控制的，也有部分寄存器运行固定的预制硬件逻辑，对机器语言程序员透明
+
+对于上层的程序员来说，我们不需要考虑存储体系的层次结构，只需要将其看作一个整体进行数据的读写即可，信息在不同层次间的传递，会通过相应的**连接方式**(软件，硬件，软硬结合)自动完成
+
+**缓存---主存---辅存**
+
+![img](https://pic1.zhimg.com/v2-0a608a77240d102a0d013c311b9e1252_1440w.jpg)
+
+程序运行时，CPU需要将主存中保存的指令，数据读如到寄存器中执行
+
+而对于某些大型程序，或是部分大容量的数据，资料，由于主存容量有限，可能还需要主机外部可扩展的辅存来存储，因而主存---辅存之间会通过硬件接口和软件适配结合的方式，完成数据的传递交换，构成一个存储整体，称之为**虚拟存储器**
+
+我们在进行程序编写时，看到的地址是对应虚拟存储器的**虚地址/逻辑地址**，在程序实际运行时，会通过一定的机制将虚地址转为真实的物理地址
+
+对于上层软件的开发者来说，不需要考虑这个存储整体的数据传输，通常只需要将它们看作一个整体进行调用即可，一些情况下可以通过编码控制数据/资源，从辅存到主存，或是在主存内部(RAM ROM之间)的加载和卸载
+
+此外，由于CPU的运行速度提升（摩尔定律）较主存速度快，因而我们会在主存和CPU寄存器之间架设缓存(Cache)，来适配两者的速度差异
+
+缓存通过每次CPU访问主存后，对访问附近位置的数据进行预取加载，利用程序的**时间局部性**和**空间局部性**，从而在之后CPU需要访问主存时就可能出现“缓存命中”，从而直接获取预加载好的缓存数据
+
+缓存---主存，直接使用主存地址，或者说**对数据只记录主存地址**，即便数据被预加载到缓存中，其地址仍表示为主存地址，从而CPU在访问时按主存地址寻访即可，若**相应主存地址处的数据已经预加载到了缓存中**，则优先获取缓存中预加载的数据到CPU寄存器中
+
+但缓存本身并不是没有地址，在完成缓存--->CPU寄存器的数据读取过程中，CPU提供的主存地址会转换为对应的缓存地址，从而读取缓存中对应的数据
+
+主存储器地址又称之为**物理地址/实地址**
+
+缓存和主存之间通过预制硬件逻辑进行连接，对程序员是完全透明的
