--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -1017,3 +1017,181 @@ I/O 线4路，说明每地址处数据为4位
 以0000地址信号为例，行译码结果为0，第0行被选中，列译码结果为0，从而4组中对应的0列：0/16/32/48 4列被同时选中，则行列同时被选中的存储元件就是4个，输出4bit信息
 
 写入操作类似，通过行列选择，I/O输入数据并同时写入到A端A'端
+
+**动态RAM（DRAM）**
+
+动态RAM使用电容的充放来保存1和0
+
+如图三管动态RAM电路图
+
+![img](https://pica.zhimg.com/v2-b7eb714aeccc5209523ee9da25139562_1440w.jpg)
+
+单管动态RAM电路图
+
+![img](https://pic4.zhimg.com/v2-44b53d8e74594db78b1a1f2453bfc495_1440w.jpg)
+
+
+
+读取时预充信号令T4导通，VDD电压为读数据线充电，读选择信号令T2导通，此时若电容已充电（保存数据1），T1不导通，则读数据线保持高电平（读到数据0），若为充电，T1导通，读数据线放电转为低电平（读到数据0），我们还需取反才能读到正确信息，**读出信息与原存信息相反**
+
+而写入时，写入数据线高电平，T3导通，电容充电（写入1），写入数据线低电平，T3不导通，电容放电（写入0），**写入信息与输入相同**
+
+**Inter 1103芯片**
+
+Inter1103 是使用三管控制电容的动态RAM芯片
+
+译码驱动采用简单的重合法，`32*32`简单二维存储矩阵，规格`1K*1bit`
+
+但特别的是**行地址译码时还需要读写控制信号参与**，行地址译码器对每行片选线分别布置了读/写两条线路（选行同时确定读写操作）
+
+读操作如图
+
+![img](https://pic2.zhimg.com/v2-5dfb694ddbc4441e686814b9b29face7_1440w.jpg)
+
+
+
+此外由于电路中电容会漏电，导致数据丢失，因而每隔一段时间，都需要使用刷新放大器对电容中的信息进行刷新重现
+
+**Inter 4116芯片**
+
+Inter4116 是使用单管控制电容的动态RAM芯片
+
+译码驱动采用重合法，简单`128*128`二维存储矩阵，规格`16K*1bit`
+
+外特性如图
+
+![img](https://pic4.zhimg.com/v2-4473afb83ca2ac3486a414155bf93915_1440w.jpg)
+
+内部存储阵列控制如图
+
+![img](https://pic3.zhimg.com/v2-88363ade6793051c51b6c2316ce7544c_1440w.jpg)
+
+
+
+Inter4116 16K地址规格需要使用14位地址信号，但其地址信号线只有7条，需要**分两次分别传输行/列地址（7位）**
+
+此外芯片还有一个时序控制器用于产生时钟信号控制内部读写操作
+
+每列上在63和64列之间都有一个读放大器跷板电路，信号输出同非门，但能够对电路信号进行强化，避免因传输过远导致衰弱
+
+**写入时0到63列写入信息与写入数据相反，读出时再次反转为正确**
+
+**动态RAM刷新**
+
+受电容漏电影响，每个一段时间我们需要对电容中的信息进行刷新再生
+
+存储矩阵中每列都有一个刷新放大器，**刷新操作通过行选读出时启用刷新放大器来完成**，每次刷新一单行的所有电容，从而**刷新单行的时间和存取周期时间相同**
+
+**集中刷新模式**下，每隔固定时间会逐行刷新全部电容
+
+刷新周期是两次刷新完成的时间间隔
+
+以`128*128`存储矩阵，存取周期 `0.5μs`，刷新时间`2ms` ，集中刷新为例
+
+![img](https://pic2.zhimg.com/v2-5b19fd7a2131694c20611fe6c91b3f65_1440w.jpg)
+
+2ms=2000μs=4000周期
+
+刷新128行相当于进行128次读取操作，需要`128周期=128∗0.5μs=64μs`
+
+则剩余的周期4000−128周期=3872周期=1936μs这段时间可以用于与CPU之间进行数据的读写
+
+刷新消耗掉的时间中，存储体无法进行对外信息交换，称之为**死区**
+
+死区时间占比为 128/4000=3.2% 称之为**死时间率**
+
+在死区时间提交的I/O请求必须等待刷新完成
+
+**分散刷新模式**下，每进行一次读/写后，就按需刷新一行电容
+
+从而原 `0.5μs` 读写周期，变为`1μs`
+
+![img](https://pic1.zhimg.com/v2-6878e06ac5e36f0b9f925f1e430a74b4_1440w.jpg)
+
+以`128*128`存储矩阵为例，经过128次读写后，全部电容都被刷新了一次
+
+分散刷新模式的特点是通过过渡的刷新，避免死区的出现，但也延长了存取周期
+
+**异步刷新**是集中刷新和分散刷新的结合
+
+![img](https://pic1.zhimg.com/v2-c94ca59277b80ba3d2c10841b0f573a8_1440w.jpg)
+
+还是以`128*128`存储矩阵， `0.5μs`存取周期，为例
+
+我们要求每隔`2ms`都会对整个矩阵完成一次刷新（刷新周期）
+
+但并不是集中在一起完成，而将`128`行逐行刷新平分到`2ms`中，从而每`15.6μs`我们需要刷新一行
+
+如果安排得当，我们可以在`15.6μs`中找到`0.5μs`的**窗口时间**，恰好CPU不访问该存储器（例如指令译码时），从而**死区不会暴露**，不影响CPU和存储器的信息交换
+
+否则就需要强制在`15.6μs`的最后`0.5μs`进行一行刷新，死区暴露，如果CPU此时有I/O请求就必须等待刷新完成
+
+**比较动态RAM和静态RAM**
+
+![img](https://pic3.zhimg.com/v2-08b14f5cabe1c709f9ae6aaea93e0a32_1440w.jpg)
+
+动态RAM可以分别传输行/列地址，地址线条数可以减为一半，从而减少DRAM的芯片引脚数，提高封装程度，提高集成度，扩大容量
+
+而**静态RAM**通常需要发挥其**高速的优势**，因而**一般不会分别传输行/列地址**，封装度/集成度较低，容量不足
+
+虽然我们经常需要刷新动态RAM，但静态RAM工作时，实际有三管需要一直保持导通，因而一直处于漏电状态，导致**静态RAM功耗高于动态RAM**
+
+**SRAM造价较高容量低，无法大规模使用，通常用于做缓存(Cashe)**，发挥其高速优势
+
+而**DRAM，造价低，容量大，通常用于计算机主存**，内存条就是DRAM
+
+## 第五章 存储器(中)
+
+**只读存储器（ROM）**
+
+只读存储器中通常保存系统配置，系统文件一类**需要长期断电保存，不经常修改**的数据
+
+早期的只读存储器在厂家生产时，直接写入数据，用户只能进行读出无法修改
+
+后经不断发展，如今硬盘，U盘这些只读存储器在使用中能够进行反复电擦写
+
+**掩膜ROM**
+
+最早出现的掩膜ROM就是标准的
+
+由厂家在生产时写入数据，用户只能进行读出，无法修改数据的只读存储器
+
+掩膜ROM内部使用重合法构建二维存储矩阵的方式来存放数据，0/1由交叉点上MOS管的有无来确定，**交叉点上有MOS管表示1，无MOS管表示0**
+
+自然行列MOS的有无，是由厂家生成芯片时确定的（硬件编码），用户无法做出更改
+
+**PROM**
+
+![img](https://picx.zhimg.com/v2-fd514b0bb6319ee9b36ea87a811eaee7_1440w.jpg)
+
+在掩膜ROM的基础上，PROM通过设置熔丝，将数据写入的权力交给了用户
+
+**用户可进行一次性破环性的数据写入**，0/1通过熔丝的熔断情况体现
+
+熔丝熔断表示0，熔丝保留表示1
+
+**EPROM**
+
+![img](https://pic2.zhimg.com/v2-80b8edc95a4db28ae9a94b2ca7a095a7_1440w.jpg)
+
+EPROM实现了多次可编程，通过D端的通联，形式浮动删来存储数据
+
+如果需要再次编程，可通过**紫外线驱散浮动删**，擦除原有数据，重新写入即可
+
+但EPROM的擦除需要独立的紫外线放射设备来完成
+
+**EEPROM**
+
+EEPROM实现了**电可擦写**（不需要特殊设备），能进行局部/全局的擦写操作
+
+用户将EEPROM接入计算机中，可以读出数据，也可以直接由软件控制完成擦除并重新写入数据
+
+**闪存FlashMemory**
+
+高速电可擦写ROM存储器，已具备RAM的一些功能
+
+我们使用的U盘就是闪存，可作为计算机的扩展存储器进行高速的数据读写
+
+一些计算机直接使用闪存作为主存，就是使用固态硬盘
+
+此外闪存还可以作为高速缓存（Cashe）
