--- a/计算机组成原理上.md
+++ b/计算机组成原理上.md
@@ -1317,3 +1317,73 @@ CPU地址线宽16路，地址空间2K，数据线宽8路 (2K*8bit)
 G1高电平直接电源，G2A G2B低电平接A15和MREQ
 
 查表可得Y0 Y1 Y2端输出满足要求
+
+### 4.存储器的校验
+
+**存储器的校验**
+
+事实上在现代计算机复杂的电路中，不论是RAM还是ROM，经常受到内部电路的信号干扰，或是外部的各种因素影响，导致触发器翻转，电容异常的充放电，导致存储信息发生一定的改变
+
+因此我们需要对存储器中的信息，进行一定的校验，以防止读出数据错误，程序指令错误，保证计算机能够正常的运行
+
+存储器校验在现代计算机中应用广泛，不止一些安全系统，面向个人的微型计算机也采用了校验技术
+
+**接收方**会通过一定的机制，对收到的数据进行检错/纠错，以保证数据的准确
+
+**合法代码集合**
+
+要想知道读出数据是否正确，我们就需要规定一定的**合法代码集合**，以便在存储数据发生改变时知道数据出错(检错)，并进行矫正(纠错)
+
+在存储信息出错的情况中，1位信息出错占90%以上
+
+如图给出4组合法代码集合，及它们各自的检错纠错能力
+
+![img](https://pic4.zhimg.com/v2-8733484479021fbb6455389510709357_1440w.jpg)
+
+我们不难发现，合法代码集合的检错/纠错能力，与任意两和法代码之间的**二进制最小差异位数**有关，最小差异位数越多，检错/纠错能力越强
+
+第一组最小差异为1位，不具有检错/纠错能力
+
+第二组为3位，第三组位4位，第4组为5位，它们的检错/纠错能力依次增强
+
+合法代码集合的二进制最小差异位数，又称之为**编码的最小距离**，应用合法代码集合进行检错/和纠错，在指令编码时就需要满足这一最小距离来编写（最短代码不能短于最小距离，其它代码时最小距离的整数倍）
+
+编码最小距离与检错纠错能力有如下关系
+
+![img](https://pic3.zhimg.com/v2-25a7110c032fb2f81b40e1ec22fa7bc4_1440w.jpg)
+
+通常检错位数大于等于纠错位数
+
+**奇偶检验与分组**
+
+奇偶检验是另一种检错/纠错方法
+
+奇偶校验就是加入一个校验位，使原代码一定范围内的1/0个数加校验位1/0，满足奇数或是偶数（通常采取偶校验）
+
+例如8bit代码+1bit校验位，要求1个数为偶
+
+![img](https://pic3.zhimg.com/v2-09ed7f67d90a199b095a14de367fe6de_1440w.jpg)
+
+
+
+奇偶校验通常结合分组使用，简单的分组方法就是继续细分代码段，每段都加入一个校验位从而进行更细致的检错/纠错
+
+![img](https://pic4.zhimg.com/v2-bdf2c6969847555f6c089cf6ae789505_1440w.png)
+
+
+
+简单分组中，各分组间代码段不重叠，而更加复杂的非划分，重叠分组法中，会**利用重叠分组，在检错的同时准确定位出错的位置**
+
+如图汉明码的非划分分组
+
+![img](https://pica.zhimg.com/v2-893a66d36119f9025c407857d7917824_1440w.jpg)
+
+P1组包括 1357
+
+P2组包括 2367
+
+P3组包括 4567
+
+我们在2^i位置放校验码（**独立位放校验码**），将1-7共8bit数据按如图的重叠方式划分为3组，从而在检错的同时，根据重叠关系定位出错位置
+
+校验是若满足奇偶约定，则输出0，不满足输出1，依次排列P3P2P1的检测位，若结果为000则没有差错，否则这**三个检测位组成的二进制位数就是出错的位置**
