--- a/计算机组成原理上.md
+++ b/计算机组成原理上.md
@@ -1354,6 +1354,8 @@ G1高电平直接电源，G2A G2B低电平接A15和MREQ
 
 通常检错位数大于等于纠错位数
 
+### 5.汉明码的组成
+
 **奇偶检验与分组**
 
 奇偶检验是另一种检错/纠错方法
@@ -1387,3 +1389,141 @@ P3组包括 4567
 我们在2^i位置放校验码（**独立位放校验码**），将1-7共8bit数据按如图的重叠方式划分为3组，从而在检错的同时，根据重叠关系定位出错位置
 
 校验是若满足奇偶约定，则输出0，不满足输出1，依次排列P3P2P1的检测位，若结果为000则没有差错，否则这**三个检测位组成的二进制位数就是出错的位置**
+
+### 6.汉明码的编码规则
+
+汉明码就是一种特殊的**编码规则**，依托于这种编码规则我们可以在奇偶校验的同时，定位出错的位置
+
+许多其它类型的检测/纠错方法，都是在奇偶校验的基础上，制定了不同的编码规则
+
+汉明码编码规则是根据位数的二进制表示中，第n位上是否为，来决定这位数是否要进入第n组，一位数据可以被同时划分进多组中
+
+对于 00001 00010 这样的只有一位是1每组独有的位置，就成为检测位
+
+任意两组，三组，n组都有唯一一个共有的位置
+
+![img](https://pic4.zhimg.com/v2-7e28dce2c0717f7ccd8e23525f4cf17d_1440w.png)
+
+
+
+
+
+以n表示汉明码的数据位，k表示检测位，则汉明码的编码规则可用公式表示为
+
+$2^k \geq n + k + 1$
+
+k位检测为，则有k组，相应的2^k种检测情况，要能映射指出n+k位数据在单位出错时的出错位置，再加一个无差错的情况
+
+**例1：**
+
+数据0101按偶校验配置汉明码
+
+n=4 公式可得k最小为3，分三组，三个校验位
+
+共3+4=7位传输数据，校验位为 1 2 4 值待定
+
+数据位 3 5 6 7 对应数据 0101
+
+P1组：1 3(0) 5(1) 7(1) 因此1配0
+
+P2组：2 3(0) 6(1) 7(0) 因此2配1
+
+P3组：4 5(1) 6(0) 7(1) 因此4配0
+
+最终数据为：0100101
+
+**例2：**
+
+接收汉明码为 01001111 偶原则配置，求传送信息
+
+共接收8位数据，公式可得此时为3组，对每组包含的数据进行**异或**操作
+
+$P_{1} = 1 \oplus 3 \oplus 5 \oplus 7 = 0$ 
+
+$P_{2} = 2 \oplus 3 \oplus 6 \oplus 7 = 1$ 
+
+$P_{3} = 4 \oplus 5 \oplus 6 \oplus 7 = 1$
+
+此时1组无措，2 3组有错，23组共有位置为6，因而第6位数据取反（纠错时只纠1位错）
+
+或按P3P2P1排列校验码二进制110即为第6位
+
+数据位3 5 6 7第6位取反，传递信息为0101
+
+### 7.主存结构调整
+
+前面提到过，CPU的发展遵从摩尔定律，且明显比存储器发展速度块
+
+因而**CPU与同期存储器之间的速度存在很大的差异**，为了提高计算机系统整体的运行速度，我们必须对访存速度进行提升
+
+自然最直接的方法是，精进存储器的设计和制作工艺，制造出更高速的存储器件
+
+此外可以采用层次化的存储结构，设置**Cache高速缓存**来作为CPU和主存之间的中介
+
+而本节中将介绍另一种提高访存速度的方法---**调整主存结构**
+
+**单体多字系统**
+
+假设CPU的数据线宽为16位，正常情况下针对每个地址应访问到16bit数据
+
+单体多字系统是将主存中对每地址16bit的数据进行扩展，例如可扩展为64位（1字扩展为4字）
+
+CPU每次读取时，会将4字数据一次性读入到寄存器中，再从寄存器中获取每字的指令/数据进行处理
+
+从而通过扩大单次读取周期内获得的数据量，来提升访存速度
+
+![img](https://pic4.zhimg.com/v2-89436daf0e00830898883be564ee8be7_1440w.jpg)
+
+但这种主存结构也存在一定的问题
+
+1.CPU在写入数据时，由于CPU数据字长小于存储字长，需要特殊的硬件逻辑来处理这种差异
+
+2.程序运行时读取的指令/数据，并不完全是连续的存放在内存中，例如跳转指令，跳转执行范围大于4字的扩展范围时，就无法起到加速的效果，反而多读了无效的指令/数据
+
+**多体并行系统**
+
+之前讲到的多个 存储芯片/存储体 通过字扩展构成一整个存储体时，利用高位地址划分存储空间所用到的方法，就是**高位交叉顺序编址**的方法
+
+![img](https://pic2.zhimg.com/v2-06a112a6559a8932a6f83ddcfe53376f_1440w.jpg)
+
+
+
+高位交叉顺序编址的方法，实现简单，适合存储体的容量扩展，但并不利于提高CPU访存速，多个存储体都是独立接入总线与CPU相连接的，因而本身**具有并行访存的潜力**
+
+但由于使用了高位交叉顺序编址，在程序运行时的指令/数据大都是**顺序存放在某一个**存储芯片/存储体中，导致CPU经常只**单独访问**某个存储芯片/存储体，**并没有将并行的潜力发挥出来**
+
+对此的改进方法是采取**低位交叉各体轮流编址**，以低位作为体号(片选信号)，从而在地址上顺序存放的程序指令/数据，实际被交叉存放在了不同的存储芯片/存储体中
+
+![img](https://picx.zhimg.com/v2-036170e9323aeb143e5458af771db1b5_1440w.jpg)
+
+再结合之前提到的分离式通信的方法，可以在不改变存取周期的前提下，增加存储器的带宽
+
+![img](https://pic4.zhimg.com/v2-18a9b2919f139d31c9e7c18b21197629_1440w.jpg)
+
+在单体访存周期内CPU可连续对4个存储体发起访问请求
+
+四体低位交叉存储器，为实现存取周期T，总线传输周期t下的**流水式存取**，应满足T=4t
+
+![img](https://pic1.zhimg.com/v2-467fd11fcf96d94db712616633cf834c_1440w.jpg)
+
+如图存取周期为T总线周期为t下的流水式访问
+
+T+(4-1)t
+
+连续读取4个字所需时间为T+(4-1)t
+
+### 8.高性能存储芯片
+
+如图三种高性能存储芯片
+
+![img](https://pica.zhimg.com/v2-c1b4d9a5c7d6d8bebaeeb090f15929b6_1440w.jpg)
+
+类型3中DRAM芯片内集成了一个由SRAM组成的Cache高速缓存，其**容量与芯片行容量相同**
+
+CPU初次读取时，会在读取行列对应位置数据的同时，将这一行的数据加载到Cache中
+
+由于程序指令/数据大都是顺序存储的，因而下一次读取大概率是读取与上一次同行不同列的数据
+
+在下一次读取时若发现行地址与Cache加载的行数据地址相同即为“**缓存命中**”，可直接以列地址信号读出Cache中对应的数据
+
+从而可以进行**猝发式读取**（第一次较慢之后若缓存命中可高速读取）
